--- a/styles/colors.css
+++ b/styles/colors.css
@@ -1,6 +1,6 @@
 :root{
   --primary-bg: #112121;
-  --paper-bg: peachpuff;
-  --paper-text: indigo;
-  --link: teal;
+  --paper-bg: lavender;
+  --paper-text: lavender;
+  --link: #FFE4E1;
 }
