--- a/styles/main.css
+++ b/styles/main.css
@@ -49,11 +49,13 @@ a{
 }
 
 .paper{
+  position: relative;
   display: grid;
-  grid-template-rows: 100px 1fr 100px;
+  grid-template-rows: 1fr 4fr 1fr;
   border: 1.5px dashed #FFE4E1;
+  grid-gap: 1em;
   border-radius: 7px;
-  min-height: 40%;
+  min-height: 50%;
   height: auto;
   width: 50%;
   text-align: left;
@@ -63,6 +65,7 @@ a{
 .paper h1{
   letter-spacing: 0.5em;
   font-size: 1.5em;
+  margin-top: 1em;
   width: 100%;
   color: var(--title);
   text-align: center;
@@ -71,9 +74,11 @@ a{
 
 
 .paper a {
+  position: absolute;
+  bottom: 1em;
   width: 100%;
   text-align: center;
-  font-size: 1.2em;
+  font-size: 0.75em;
   line-height: 1.3em;
   text-decoration: none;
 }
@@ -90,15 +95,21 @@ a{
 
 #tracklist ul{
   display: grid;
+  padding: 2em;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 1em;
   margin: 0;
 }
 
 #tracklist li{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   margin: 0;
   list-style-type: none;
   font-size: 1.1em;
-  text-align: left;
+  text-align: center;
   line-height: 1.4em;
   cursor: pointer;
 }
@@ -120,11 +131,19 @@ a{
   animation: fade-in 3s;
 }
 
-
-@keyframes move-in {
-   0% {width:0%}
-   100% {width:100%;}
+.fade-out{
+  animation: fade-out 2s;
 }
+
+
+@keyframes fade-in{
   0% {opacity: 0;}
   70% {opacity: 0.6;}
   100% {opacity: 1;}
+}
+
+@keyframes fade-out{
+  0% {opacity: 1;}
+  70% {opacity: 0.6;}
+  100% {opacity: 0;}
+}
