--- a/styles/main.css
+++ b/styles/main.css
@@ -11,8 +11,7 @@ body, html{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background: rgb(0,0,0);
-  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(33,21,4,1) 100%); 
+  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(33,21,54,1) 100%);
   min-height: 100vh;
   width: 100%;
   display: flex;
@@ -21,6 +20,7 @@ body, html{
   align-items: center;
   font-family: sinkin;
   letter-spacing: 0.24em;
+  animation: undulate 24s infinite alternate;
 }
 
 body + div{
@@ -56,9 +56,24 @@ a{
   grid-gap: 1em;
   border-radius: 7px;
   min-height: 50%;
+  padding: 1em;;
   height: auto;
   width: 50%;
-  text-align: left;
+  color: var(--text);
+}
+
+.paper-splash{
+  position: relative;
+  display: flex;
+  border: 1.5px dashed #FFE4E1;
+  border-radius: 7px;
+  min-height: 50%;
+  padding: 1em;;
+  height: auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
   color: var(--text);
 }
 
@@ -66,6 +81,14 @@ a{
   letter-spacing: 0.5em;
   font-size: 1.5em;
   margin-top: 1em;
+  width: 100%;
+  color: var(--title);
+  text-align: center;
+}
+.paper-splash h1{
+  letter-spacing: 0.75em;
+  font-size: 4em;
+  margin-top: 0em;
   width: 100%;
   color: var(--title);
   text-align: center;
@@ -83,6 +106,16 @@ a{
   text-decoration: none;
 }
 
+.paper-splash a {
+  position: absolute;
+  bottom: 1em;
+  width: 100%;
+  text-align: center;
+  font-size: 0.75em;
+  line-height: 1.3em;
+  text-decoration: none;
+}
+
 #tracklist{
   display: flex;
   justify-content: center;
@@ -91,6 +124,7 @@ a{
   position: relative;
   color: var(--text);
   font-weight: bold;
+  animation: fade-in 1s;
 }
 
 #tracklist ul{
@@ -114,15 +148,22 @@ a{
   cursor: pointer;
 }
 
+
 #text {
   position: relative;
   font-size: 1em;
+  margin: auto;
   font-weight: bold;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 1em;
+  animation: fade-in 3s;
+}
+
+#text p {
+  padding-left: 1em;
 }
 
 
@@ -135,6 +176,9 @@ a{
   animation: fade-out 2s;
 }
 
+.change-color{
+  animation: changeColor 1s;
+}
 
 @keyframes fade-in{
   0% {opacity: 0;}
@@ -146,4 +190,25 @@ a{
   0% {opacity: 1;}
   70% {opacity: 0.6;}
   100% {opacity: 0;}
+}
+
+@keyframes changeColor{
+  0% {border-color: lavender; border-width: 1px}
+  50% {border-color: yellow; border-width: 2px; }
+  100% {border-color: lavender; border-width: 1px; }
+}
+@keyframes undulate{
+0%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(33,21,54,1) 100%);}
+5%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(33,21,44,1) 100%);}
+10%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,62,1) 64%, rgba(33,21,34,1) 100%);}
+15%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,64,1) 64%, rgba(33,21,24,1) 100%);}
+20%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,66,1) 64%, rgba(33,21,14,1) 100%);}
+33%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,68,1) 64%, rgba(33,21,4,1) 100%);}
+43%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(43,21,4,1) 100%);}
+53%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(53,21,4,1) 100%);}
+66%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(63,21,4,1) 100%);}
+76%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(66,21,4,1) 100%);}
+86%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(68,21,4,1) 100%);}
+96%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(70,21,4,1) 100%);}
+100%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(73,21,4,1) 100%);}
 }
