--- a/styles/main.css
+++ b/styles/main.css
@@ -166,7 +166,31 @@ a{
   padding-left: 1em;
 }
 
+.track{
+  position: relative;
+  display: grid;
+  grid-template-rows: 50px 1fr 50px;
+  border: 1.5px dashed #FFE4E1;
+  grid-gap: 1em;
+  border-radius: 7px;
+  min-height: 50%;
+  padding: 1em;;
+  height: auto;
+  width: 50%;
+  color: var(--text);
+}
 
+.track h1 {
+  text-align: center;
+}
+
+.track a {
+  width: 100%;
+  text-decoration: none;
+  text-align: center;
+  position: absolute;
+  bottom: 1em;
+}
 
 .fade-in{
   animation: fade-in 3s;
