--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,6 @@
 @font-face{
-  font-family: interval;
-  src: url('./fonts/Interval.otf')
-}
-@font-face{
   font-family: sinkin;
-  src: url('./fonts/SinkinSans-100Thin.otf')
+  src: url('fonts/SinkinSans-100Thin.otf')
 }
 
 body, html{
@@ -12,21 +8,18 @@ body, html{
   padding: 0;
   box-sizing: border-box;
   background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(33,21,54,1) 100%);
-  min-height: 100vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-family: sinkin;
-  letter-spacing: 0.24em;
-  animation: undulate 24s infinite alternate;
-}
-
-body + div{
   height: 100%;
   width: 100%;
+  font-family: sinkin;
+  font-size: 24px;
+  animation: undulate 24s infinite alternate;
 }
+  @media (max-width: 700px) {
+    body{
+      height: auto;
+      width: auto;
+    }
+  }
 
 .wrapper{
   position: relative;
@@ -34,12 +27,34 @@ body + div{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 100%;
+  height: 100%;
   width: 100%;
 }
+  @media (max-width: 800px){
+    .wrapper{
+      height: auto;
+      width: auto;
+    }
+  }
 
-a{
+#track-buttons{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#track-buttons a {
+  margin: 0.5em;
+}
+
+#track-buttons p {
+  margin: 0.5em;
+  opacity: 0;
+}
+a {
   color: var(--link);
+  fill: var(--link);
 }
 
 .title{
@@ -50,15 +65,14 @@ a{
 
 .paper{
   position: relative;
-  display: grid;
-  grid-template-rows: 1fr 4fr 1fr;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: space-between;
   border: 1.5px dashed #FFE4E1;
-  grid-gap: 1em;
   border-radius: 7px;
-  min-height: 50%;
-  padding: 1em;;
-  height: auto;
-  width: 50%;
+  padding: 1rem;
+  width: 65%;
   color: var(--text);
 }
 
@@ -76,15 +90,35 @@ a{
   width: 50%;
   color: var(--text);
 }
-
 .paper h1{
+  margin: 0;
+  margin-right: 0.5em;
+  margin-left: 0.5em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   letter-spacing: 0.5em;
-  font-size: 1.5em;
-  margin-top: 1em;
+  font-size: 1.3em;
   width: 100%;
   color: var(--title);
-  text-align: center;
 }
+.paper h1 span{
+  margin: 0.25em;
+}
+  @media (max-width: 1080px){
+    .paper h1{
+      font-size: 1.2em;
+      flex-direction: column;
+      line-height: 1.5em;
+    }
+  }
+  @media (max-width: 667px)  {
+    .paper h1{
+      font-size: .7em;
+    }
+  }
+
 .paper-splash h1{
   letter-spacing: 0.75em;
   font-size: 4em;
@@ -93,19 +127,6 @@ a{
   color: var(--title);
   text-align: center;
 }
-
-
-
-.paper a {
-  position: absolute;
-  bottom: 1em;
-  width: 100%;
-  text-align: center;
-  font-size: 0.75em;
-  line-height: 1.3em;
-  text-decoration: none;
-}
-
 .paper-splash a {
   position: absolute;
   bottom: 1em;
@@ -117,10 +138,14 @@ a{
 }
 
 #tracklist{
+  height: auto;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  font-size: 1rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   position: relative;
   color: var(--text);
   font-weight: bold;
@@ -128,37 +153,39 @@ a{
 }
 
 #tracklist ul{
-  display: grid;
-  padding: 2em;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 1em;
-  margin: 0;
+  margin: auto;
+  padding: 1em;
+  text-align: center;
 }
 
 #tracklist li{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin: 0;
-  list-style-type: none;
-  font-size: 1.1em;
-  text-align: center;
-  line-height: 1.4em;
+  display: inline-block;
+  padding: 0.5em;
   cursor: pointer;
 }
 
+#tracklist li span{
+  /* This handles the bullet point between items, 
+  so it looks more like the  cassette tape for the top gun soundtrack */
+  padding-left: 1em;
+  font-size: 0.9em;
+}
+  @media(max-width: 800px) {
+    #tracklist li span {
+      display: none;
+    }
+  }
 
 #text {
   position: relative;
+  overflow-y: scroll;
   font-size: 1em;
-  margin: auto;
-  font-weight: bold;
+  line-height: 1.6em;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1em;
+  padding: 2em;
   animation: fade-in 3s;
 }
 
@@ -167,29 +194,15 @@ a{
 }
 
 .track{
-  position: relative;
-  display: grid;
-  grid-template-rows: 50px 1fr 50px;
-  border: 1.5px dashed #FFE4E1;
-  grid-gap: 1em;
-  border-radius: 7px;
-  min-height: 50%;
-  padding: 1em;;
-  height: auto;
+  height: 92%;
   width: 50%;
-  color: var(--text);
 }
 
 .track h1 {
+  color: white;
+  font-size: 1.4em;
+  line-height: 1.6em;
   text-align: center;
-}
-
-.track a {
-  width: 100%;
-  text-decoration: none;
-  text-align: center;
-  position: absolute;
-  bottom: 1em;
 }
 
 .fade-in{
