--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,12 @@ body, html{
     }
   }
 
+a {
+  text-decoration: none;
+  color: var(--link);
+  fill: var(--link);
+}
+
 .wrapper{
   position: relative;
   display: flex;
@@ -37,67 +43,26 @@ body, html{
     }
   }
 
-#track-buttons{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#track-buttons a {
-  margin: 0.5em;
-}
-
-#track-buttons p {
-  margin: 0.5em;
-  opacity: 0;
-}
-a {
-  color: var(--link);
-  fill: var(--link);
-}
-
-.title{
-  position: fixed;
-  top: 0;
-  left: 50;
-}
-
 .paper{
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: space-between;
+  align-items: center;
   border: 1.5px dashed #FFE4E1;
   border-radius: 7px;
   padding: 1rem;
   width: 65%;
   color: var(--text);
 }
-
-.paper-splash{
-  position: relative;
-  display: flex;
-  border: 1.5px dashed #FFE4E1;
-  border-radius: 7px;
-  min-height: 50%;
-  padding: 1em;;
-  height: auto;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
-  color: var(--text);
-}
 .paper h1{
-  margin: 0;
-  margin-right: 0.5em;
-  margin-left: 0.5em;
   display: flex;
+  margin-top: 0;
+  margin-bottom: 0;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  text-align: center;
   letter-spacing: 0.5em;
   font-size: 1.3em;
   width: 100%;
@@ -119,23 +84,39 @@ a {
     }
   }
 
-.paper-splash h1{
-  letter-spacing: 0.75em;
-  font-size: 4em;
+.cover {
+  min-height: 40%;
+  padding: 2em;
+  width: 50%;
+  color: var(--text);
+}
+.cover h1{
   margin-top: 0em;
-  width: 100%;
-  color: var(--title);
-  text-align: center;
+  margin-left: 1em;
+  letter-spacing: 0.7em;
+  line-height: 1.4em;
+  font-size: 5.5vw !important;
 }
-.paper-splash a {
-  position: absolute;
-  bottom: 1em;
-  width: 100%;
-  text-align: center;
-  font-size: 0.75em;
-  line-height: 1.3em;
-  text-decoration: none;
+
+.cover a{
+  margin-top: 2em;
+  margin-bottom: -1em;
 }
+
+  @media (max-width: 800px){
+    .cover{
+      position: absolute;
+      top: 35vh;
+      height: 25vh;
+      display: flex;
+      padding: 1em;
+      justify-content: space-around;
+      width: 50%;
+    }
+    .cover h1{
+      font-size: 8vw !important;
+    }
+  }
 
 #tracklist{
   height: auto;
@@ -159,13 +140,14 @@ a {
 }
 
 #tracklist li{
+  line-height: 1.5em;
   display: inline-block;
   padding: 0.5em;
   cursor: pointer;
 }
 
 #tracklist li span{
-  /* This handles the bullet point between items, 
+  /* This handles the lil' dot  between items, 
   so it looks more like the  cassette tape for the top gun soundtrack */
   padding-left: 1em;
   font-size: 0.9em;
@@ -175,35 +157,62 @@ a {
       display: none;
     }
   }
-
-#text {
-  position: relative;
-  overflow-y: scroll;
-  font-size: 1em;
-  line-height: 1.6em;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 2em;
-  animation: fade-in 3s;
-}
-
-#text p {
-  padding-left: 1em;
-}
-
-.track{
+/* 
+ Styling for the single entry page: the 'track' chosen from the 'tracklist'
+*/
+#track{
   height: 92%;
-  width: 50%;
+  width: 40%;
 }
+  @media (max-width: 667px) {
+    #track{
+      height: auto;
+      min-height: 95vh;
+      width: 80%;
+    }
+  }
 
-.track h1 {
+
+
+#track h1 {
   color: white;
   font-size: 1.4em;
   line-height: 1.6em;
   text-align: center;
 }
+  @media (max-width: 667px){
+    #track h1{
+      font-size: 1.1em;
+    }
+  }
+
+#text {
+  overflow-y: scroll;
+  line-height: 1.6em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  animation: fade-in 3s;
+}
+  @media (max-width: 667px) {
+    #text {
+      padding-top: 0.9em;
+      padding: 0;
+      padding-left: 0;
+      font-size: 0.9em;
+    }
+  }
+
+
+#track-buttons{
+  display: flex;
+}
+
+#track-buttons a, p{
+  margin: 0.5em;
+}
+
+/* The Sweet Animations */
 
 .fade-in{
   animation: fade-in 3s;
@@ -234,6 +243,7 @@ a {
   50% {border-color: yellow; border-width: 2px; }
   100% {border-color: lavender; border-width: 1px; }
 }
+
 @keyframes undulate{
 0%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(33,21,54,1) 100%);}
 5%{  background: linear-gradient(180deg, rgba(0,0,0,1) 2%, rgba(6,7,60,1) 64%, rgba(33,21,44,1) 100%);}
